cmake_minimum_required(VERSION 3.6)
project(ToysCode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    C/base/tests/test_sort.c
    C/base/tests/test_toys_list.c
    C/base/tests/test_toys_sds.c
    C/base/binary_tree.c
    C/base/binary_tree.h
    C/base/graph.c
    C/base/graph.h
    C/base/queue.h
    C/base/sort.c
    C/base/sort.h
    C/base/string_.c
    C/base/string_.h
    C/base/test_graph.c
    C/base/toys_list.c
    C/base/toys_list.h
    C/base/toys_mem.c
    C/base/toys_mem.h
    C/base/toys_sds.c
    C/base/toys_sds.h
    C/base/toys_skiplist.c
    C/base/toys_skiplist.h
    C/base/toys_utils.h
    C/build/CMakeFiles/3.5.1/CompilerIdC/CMakeCCompilerId.c
    C/build/CMakeFiles/3.5.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
    C/build/CMakeFiles/feature_tests.c
    C/build/CMakeFiles/feature_tests.cxx
    C/Lispy/tests/test_mpc.c
    C/Lispy/utils/utils.h
    C/Lispy/calculate.c
    C/Lispy/mpc.c
    C/Lispy/mpc.h
    C/net/tests/test_echo_client.c
    C/net/tests/test_echo_server.c
    C/net/client.h
    C/net/echo_client.c
    C/net/echo_server.c
    C/net/server.h
    C/CMakeLists.txt
    Cpp/LeetCode/Lists/AddTwoNumbers.cc
    Cpp/LeetCode/Lists/DeleteNodes.cc
    Cpp/LeetCode/Lists/IntersectionList.cc
    Cpp/LeetCode/Lists/PartitionList.cc
    Cpp/LeetCode/Lists/RemoveDuplicated.cc
    Cpp/LeetCode/Lists/RotateList.cc
    Cpp/LeetCode/Lists/TwoSum.cc
    Cpp/LeetCode/Trees/BinaryTreePath.cc
    Cpp/LeetCode/Trees/FlattenBinaryTree.cc
    Cpp/LeetCode/Trees/InvertTree.cc
    Cpp/LeetCode/Trees/isSymmetric.cc
    Cpp/LeetCode/Trees/LevelOrderTraversal.cc
    Cpp/LeetCode/Trees/MaxDepth.cc
    Cpp/LeetCode/Trees/PathSum.cc
    Cpp/LeetCode/Trees/SameTree.cc
    Cpp/LeetCode/Trees/ValidateBstTree.cc
    Cpp/LeetCode/ReverseInteger.cc
    Cpp/Stone/src/test/test_lexical.cc
    Cpp/Stone/src/test/test_parser.cc
    Cpp/Stone/src/test/test_stone_ast.cc
    Cpp/Stone/src/lexical.cc
    Cpp/Stone/src/lexical.h
    Cpp/Stone/src/parser.cc
    Cpp/Stone/src/parser.h
    Cpp/Stone/src/stone_ast.cc
    Cpp/Stone/src/stone_ast.h
    Cpp/Utilities/include/get_first_follow.h
    Cpp/Utilities/include/logging.h
    Cpp/Utilities/include/re_to_nfa.h
    Cpp/Utilities/include/STL.h
    Cpp/Utilities/src/get_first_follow.cc
    Cpp/Utilities/src/logging.cc
    Cpp/Utilities/src/re_to_nfa.cc
    Cpp/Utilities/test/get_first_follow_test.cc
    Cpp/Utilities/test/log_unit_test.cc
    Cpp/Utilities/test/re_to_nfa_test.cc
    Cpp/catch.hpp)

add_executable(ToysCode ${SOURCE_FILES})